# template_project

./: .gitignore  CMakeLists.txt  README.md
doc/: project.md
include/: main.h
src/: main.cpp
